--- a/style.css
+++ b/style.css
@@ -24,11 +24,21 @@ body, h1, h2, h3 {
 	margin-bottom: 0px;
 }
 
+.date-picker div {
+	float: left;
+}
+.date-to {
+	margin-left: 5%;
+}
 .main-title h2 {
 	margin-top: 3px;
 	font-size: 18px;
 }
 
+.district-311-list {
+	clear: both;
+	margin-top: 7%;
+}
 .district-311-info {
 	margin-left: 2%;
 	float: left;
@@ -59,4 +69,9 @@ body, h1, h2, h3 {
 
 .service-request-cat {
 	cursor: pointer;
+}
+
+footer {
+	clear: both;
+	text-align: right;
 }
